# dbt-macro-polo

./: .bash_history  .gitignore  .pre-commit-config.yaml  .sqlfluff  AGENTS.md  BUG_FIXES_REPORT.md  CHANGELOG.md  README.md  dbt_project.yml  pyproject.toml  run.sh
.github/workflows/: ci.yml
integration_tests/: .env.template  .gitignore  README.md  dbt_project.yaml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  run.sh
integration_tests/data/: seed_dummy_data.csv  seed_dummy_data_incremental_run.csv  seed_dummy_data_initial_run.csv  seed_get_max_timestamp.csv  seed_warehouse_config.csv
integration_tests/models/: test_adaptive_compute_basic.sql  test_adaptive_compute_basic.yaml  test_adaptive_deviation_arithmetic.sql  test_allocate_warehouse.sql  test_create_macro_context.sql  test_extract_compile_features.sql  test_get_cache_value.sql  test_get_high_water_mark.sql  test_get_max_timestamp.sql  test_get_runtime_state.sql  test_graph_model_features.sql  test_handle_adaptive_cold_start.sql  test_handle_adaptive_disabled.sql  test_handle_adaptive_disabled.yaml  test_handle_monitoring.sql  test_handle_operation.sql  test_handle_operation.yaml  test_handle_scheduling.sql  test_is_cron_schedule.sql  test_is_within_time_range.sql  test_log_event.sql  test_logging.sql  test_polo_telemetry.sql  test_provision_compute.sql  test_warehouse_optimiser.sql  test_warehouse_optimiser.yaml  test_warehouse_optimiser_basic.sql  test_warehouse_optimiser_basic.yaml  test_warehouse_optimiser_scheduling.sql  test_warehouse_optimiser_scheduling.yaml
integration_tests/unit/: test_cron_translator.sql
macros/: atheon_delete_insert_merge_sql.sql  cache_value.sql  macro_context.sql  shoul_full_refresh.sql
(+131 files in other folders)
