[tool.poetry]
name = "dbt-macro-polo"
version = "0.0.1"
description = "A sophisticated exploration of dbt macro capabilities, pushing the boundaries of what's possible with dbt's macro system."
authors = ["Dominik Golebiewski <dominik.golebiewski@atheon.co.uk>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
dbt-snowflake = "^1.8"
dbt-core = "^1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
