[tool.poetry]
name = "dbt-macro-polo"
version = "1.0.0"
description = "A sophisticated exploration of dbt macro capabilities, pushing the boundaries of what's possible with dbt's macro system."
authors = ["Dominik Golebiewski <dominik.golebiewski@atheon.co.uk>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
dbt-snowflake = ">=1.8,<1.11"
dbt-core = ">=1.8,<1.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
yamllint = "^1.35.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
